bugfix: now popovers won't overlap. Only the innermost box will appear. This relies on JS events as CSS can't suppress or detect bubbling hover events.

--- a/frontend/assets/css/text-viewer.scss
+++ b/frontend/assets/css/text-viewer.scss
@@ -509,6 +509,15 @@ $render-sic: false;
       > .info-box {
         display: inline-block;
       }
+      &.child-hovered {
+        // special case for nested info boxes.
+        // we don't want the parent one to popover 
+        // when the user hovers the child one.
+        // This class is dynamically set by text-viewer.js.
+        > .info-box {
+          display: none;
+        }
+      }
     }
   }
 
